| Bug #1862 | FLUSH TABLES in the body of a stored procedure causes segfault | ||
|---|---|---|---|
| Submitted: | 17 Nov 2003 6:35 | Modified: | 19 Nov 2003 2:30 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0 | OS: | Linux (Linux) |
| Assigned to: | Bugs System | Target Version: | |
[19 Nov 2003 2:30]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html

Description: see how-to-repeat How to repeat: delimiter |; create table t(a int)| create procedure myproc() begin insert into t values(2); flush tables; end | delimiter ;| call myproc(); # the second call causes a segmentation fault of the MySQL server. call myproc(); Suggested fix: Per-Erik Martin is aware of it.